--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
   <footer class="row">
     <div>
       <div>
-        <a href="https://github.com/GalvanizeOpenSource">Source</a>
+        <a href="https://github.com/bexnh/choose">Source</a>
       </div>
     </div>
   </footer>
